@@ -38,7 +38,7 @@ public class ConverterAlias {
 	alias.put("IBM819",	 	"8859_1");
 	alias.put("CP819",	 	"8859_1");
 	alias.put("CSISOLATIN1",	"8859_1");
-	useIconv.put("8859_1", "Y");
+	useIconv.put("8859_1", "ISO-8859-1");
 
 	alias.put("ISO_8859-2:1987",	"8859_2");
 	alias.put("ISO-IR-101",		"8859_2");
@@ -47,7 +47,7 @@ public class ConverterAlias {
 	alias.put("LATIN2",		"8859_2");
 	alias.put("L2",                 "8859_2");
 	alias.put("CSISOLATIN2",	"8859_2");
-	useIconv.put("8859_2", "Y");
+	useIconv.put("8859_2", "ISO-8859-2");
 
 	alias.put("ISO_8859-3:1988",	"8859_3");
 	alias.put("ISO-IR-109",		"8859_3");
@@ -56,7 +56,7 @@ public class ConverterAlias {
 	alias.put("LATIN3",		"8859_3");
 	alias.put("L3",                 "8859_3");
 	alias.put("CSISOLATIN3",	"8859_3");
-	useIconv.put("8859_3", "Y");
+	useIconv.put("8859_3", "ISO-8859-3");
 
 	alias.put("ISO_8859-4:1988",	"8859_4");
 	alias.put("ISO-IR-110",		"8859_4");
@@ -65,7 +65,7 @@ public class ConverterAlias {
 	alias.put("LATIN4",		"8859_4");
 	alias.put("L4",		        "8859_4");
 	alias.put("CSISOLATIN4",	"8859_4");
-	useIconv.put("8859_4", "Y");
+	useIconv.put("8859_4", "ISO-8859-4");
 
 	alias.put("ISO_8859-5:1988",	"8859_5");
 	alias.put("ISO-IR-144",		"8859_5");
@@ -73,7 +73,7 @@ public class ConverterAlias {
 	alias.put("ISO-8859-5",		"8859_5");
 	alias.put("CYRILLIC",		"8859_5");
 	alias.put("CSISOLATINCYRILLIC",	"8859_5");
-	useIconv.put("8859_5", "Y");
+	useIconv.put("8859_5", "ISO-8859-5");
 
 	alias.put("ISO_8859-6:1987",	"8859_6");
 	alias.put("ISO-IR-127",		"8859_6");
@@ -83,7 +83,7 @@ public class ConverterAlias {
 	alias.put("ASMO-708",		"8859_6");
 	alias.put("ARABIC",		"8859_6");
 	alias.put("CSISOLATINARABIC",	"8859_6");
-	useIconv.put("8859_6", "Y");
+	useIconv.put("8859_6", "ISO-8859-6");
 
 	alias.put("ISO_8859-7:1987",	"8859_7");
 	alias.put("ISO-IR-126",		"8859_7");
@@ -94,7 +94,7 @@ public class ConverterAlias {
 	alias.put("GREEK",		"8859_7");
 	alias.put("GREEK8",		"8859_7");
 	alias.put("CSISOLATINGREEK",	"8859_7");
-	useIconv.put("8859_7", "Y");
+	useIconv.put("8859_7", "ISO-8859-7");
 
 	alias.put("ISO_8859-8:1988",	"8859_8");
 	alias.put("ISO-IR-138",		"8859_8");
@@ -102,7 +102,7 @@ public class ConverterAlias {
 	alias.put("ISO-8859-8",		"8859_8");
 	alias.put("HEBREW",		"8859_8");
 	alias.put("CSISOLATINHEBREW",	"8859_8");
-	useIconv.put("8859_8", "Y");
+	useIconv.put("8859_8", "ISO-8859-8");
 
 	alias.put("ISO_8859-9:1989",	"8859_9");
 	alias.put("ISO-IR-148",		"8859_9");
@@ -111,23 +111,23 @@ public class ConverterAlias {
 	alias.put("LATIN5",		"8859_9");
 	alias.put("L5",		        "8859_9");
 	alias.put("CSISOLATIN5",	"8859_9");
-	useIconv.put("8859_9", "Y");
+	useIconv.put("8859_9", "ISO-8859-9");
 
 	alias.put("EBCDIC",		"CP1046");
 	useIconv.put("CP1046", "Y");
 
 	alias.put("UTF-8",		"UTF8");
-	useIconv.put("UTF8", "Y");
+	useIconv.put("UTF8", "UTF-8");
 
 	alias.put("KOI8-R",		"KOI8_R");
 	alias.put("CSKOI8R",		"KOI8_R");
-	useIconv.put("KOI8_R", "Y");
+	useIconv.put("KOI8_R", "KOI8-R");
 
 	alias.put("EUCJP",              "EUC-JP");
 	alias.put("EUC_JP",             "EUC-JP");
 	alias.put("EUCJIS",             "EUC-JP");
 	alias.put("CSEUCPKDFMTJAPANESE","EUC-JP");
-	useIconv.put("EUC-JP", "Y");
+	useIconv.put("EUC-JP", "EUC-JP");
 
 	alias.put("US-ASCII",		"ASCII");
 	alias.put("ANSI_X3.4-1968",	"ASCII");
@@ -139,12 +139,12 @@ public class ConverterAlias {
 	alias.put("IBM367",             "ASCII");
 	alias.put("CP367",	        "ASCII");
 	alias.put("CPASCII",	        "ASCII");
-	useIconv.put("ASCII", "Y");
+	useIconv.put("ASCII", "ASCII");
 
 	alias.put("UNICODEBIGUNMARKED",	"UTF-16BE");
-	useIconv.put("UTF-16BE", "Y");
+	useIconv.put("UTF-16BE", "UTF-16BE");
 	alias.put("UNICODELITTLEUNMARKED",	"UTF-16LE");
-	useIconv.put("UTF-16LE", "Y");
+	useIconv.put("UTF-16LE", "UTF-16LE");
 
 	/* add more here */
     }
@@ -172,5 +172,16 @@ public class ConverterAlias {
 	name = name.toUpperCase();
 	Object obj = useIconv.get(name);
 	return obj != null ? true : false;
+    }
+
+    /**
+     * Returns encoding name to be used for calling iconv.
+     *
+     * @param name of the encoding.
+     * @return Encoding name to be used for calling iconv.
+     */
+    static String iconvAlias(String name) {
+	String iconvEnc = (String)(useIconv.get(name.toUpperCase()));
+	return iconvEnc == null ? name : iconvEnc;
     }
 }
